syntax = "proto3";

package pb;

import "fix.proto";
import "google/protobuf/timestamp.proto";


option go_package = "Backend/pb";

// Create
message CreateFixRequest {
  string FirstName = 1;
  string LastName = 2;
  string Birth = 3;
  string Country = 4;
  string Gender = 5;
  string Blood = 6;
}

message CreateFixResponse {
  string SessionsID = 1;
  string Email = 2;
  google.protobuf.Timestamp CreateAt = 3;
  google.protobuf.Timestamp  AccessTokenExpiresAt = 4;
}

// Get
message GetFixRequest {
  string SessionID = 1;
  int32 UserID = 2;
}

message GetFixResponse {
  Fix fix = 1;
}

// Delete
message DeleteFixRequest { 
  string SessionID = 1;
}